force-app/force-app/force-app/main/default/objects/Customer_Feedback_Parameter__c/Customer_Feedback_Parameter__c.object-meta.xml
<CustomObject>
    <label>Customer Feedback Parameter</label>
    <nameField>
        <displayFormat>CFP-{0000}</displayFormat>
        <label>Customer Feedback Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Feedback Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>