force-app/force-app/force-app/main/default/objects/Customer_Feedback_Parameter__c/fields/Area_of_appreciation__c.field-meta.xml
<CustomField>
    <fullName>Area_of_appreciation__c</fullName>
    <label>Area of appreciation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>