force-app/force-app/force-app/main/default/objects/Customer_Feedback_Parameter__c/fields/Area_of_improvement__c.field-meta.xml
<CustomField>
    <fullName>Area_of_improvement__c</fullName>
    <label>Area of improvement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>