force-app/force-app/force-app/main/default/objects/Customer_Feedback_Parameter__c/fields/Customer_Feedback_Report__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feedback_Report__c</fullName>
    <label>Customer Feedback Report</label>
    <referenceTo>Customer_Feedback_Report__c</referenceTo>
    <relationshipLabel>Customer Feedback Parameters</relationshipLabel>
    <relationshipName>Customer_Feedback_Parameters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>