force-app/force-app/force-app/main/default/objects/Customer_Feedback_Parameter__c/fields/Feedback_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Parameters__c</fullName>
    <label>Feedback Parameters</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Timely Response</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Overall feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>