force-app/force-app/force-app/main/default/objects/Customer_Feedback_Parameter__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delighted</fullName>
            </value>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>