force-app/force-app/force-app/main/default/objects/Customer_Feedback_Parameter__c/fields/Total_Rating__c.field-meta.xml
<CustomField>
    <fullName>Total_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>